# crisps-8

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  test.yaml
dependencies/: CMakeLists.txt
include/: chip_8.h  chip_8.hh  chip_8_definitions.h  chip_8_definitions.hh  display.h  display.hh  sdl2_init.h
src/: CMakeLists.txt  chip_8.cpp  chip_8.h  display.cpp  display.h  main.cpp  sdl2_init.cpp
